<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blue_btn_bg_color"
              android:orientation="vertical"
              tools:context="com.itisi.itisiapp.mvp.ui.main.home.HomeFragment"
>

    <com.youth.banner.Banner
        android:id="@+id/banner_guizhou"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="#cccccc">

    </com.youth.banner.Banner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0094ff"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_20"
    >
        <TextView
            android:id="@+id/tv_guizhou_nation"
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="@string/guizhou_nation"
        />
        <TextView
            android:id="@+id/tv_guizhou_scenic"
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="@string/guizhou_scenic"
        />
        <TextView
            android:id="@+id/tv_guizhou_speciality"
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="@string/guizhou_speciality"
        />
        <TextView
            android:id="@+id/tv_guizhou_blacklist"
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="@string/guizhou_blacklist"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0094ff"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_20"
    >
        <TextView
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="失物招领"
        />
        <TextView
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="大学城"
        />
        <TextView
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="大学城"
        />
        <TextView
            style="@style/MainMenu"
            android:drawableTop="@mipmap/menu_temp_black"
            android:text="大学城"
        />
    </LinearLayout>



</LinearLayout>
